template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_node_red_name": {
            "defaultValue": "node-red",
            "type": "String"
        },
        "adminUsername": {
          "type": "string",
        "minLength": 1,
        "metadata": {
          "description": "Admin username"
          }
        },
        "adminPassword": {
          "type": "securestring",
          "metadata": {
            "description": "Admin password"
          }
        },
        "publicipaddressDnsName": {
          "type": "string",
          "minLength": 1
        },
        "allow1880AccessFrom": {
          "type": "string",
          "minLength": 1
        },

        "networkInterfaces_node_red303_name": {
            "defaultValue": "node-red303",
            "type": "String"
        },
        "publicIPAddresses_node_red_ip_name": {
            "defaultValue": "node-red-ip",
            "type": "String"
        },
        "networkSecurityGroups_node_red_nsg_name": {
            "defaultValue": "node-red-nsg",
            "type": "String"
        },
        "virtualNetworks_aleksiv_node_red_vnet_name": {
            "defaultValue": "aleksiv-node-red-vnet",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "disks_node_red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8_name": {
            "defaultValue": "node-red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8",
            "type": "String"
        },
        "securityRules_Port_1880_name": {
            "defaultValue": "Port_1880",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Compute/disks/node-red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_node_red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "accountType": "Standard_LRS",
                "osType": "Linux",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/Providers/Microsoft.Compute/Locations/northeurope/Publishers/Canonical/ArtifactTypes/VMImage/Offers/UbuntuServer/Skus/16.04-LTS/Versions/latest"
                    }
                },
                "diskSizeGB": 30
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Compute/virtualMachines/node-red'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_node_red_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_node_red_name'),'_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_node_red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8_name'))]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_node_red_name')]",
                    "adminUsername": "[concat(parameters('virtualMachines_node_red_name'),'-admin')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_node_red303_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', parameters('disks_node_red_OsDisk_1_0dc7ddbb31dd48c58c89af7aac8fa8a8_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_node_red303_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/networkInterfaces/node-red303'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_node_red303_name')]",
            "apiVersion": "2017-06-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "acd30832-f89d-4b30-a3bb-2f16422b1a2d",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"b1e26d00-6927-442e-a639-7ea0da8bec2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.2.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_node_red_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_aleksiv_node_red_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "zglysnhegt0ebhgeh0jt1huzoa.fx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-B7-BC-3D",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_node_red_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_node_red_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_node_red_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_aleksiv_node_red_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_node_red_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_node_red_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/networkSecurityGroups/node-red-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_node_red_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "d90ee23f-adcc-4ea8-b671-f5c6a59cc215",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_1880",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic to port 1880 from given source address",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1880",
                            "sourceAddressPrefix": "[parameters('allow1880AccessFrom')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"b9d91df3-cdd3-41d6-92ac-15c5816d06dc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/publicIPAddresses/node-red-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_node_red_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9d380302-1723-43ca-a82f-3deedf2bffaa",
                "ipAddress": "40.69.36.230",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
          "name": "[variables('publicipaddressName')]",
          "type": "Microsoft.Network/publicIPAddresses",
          "location": "[resourceGroup().location]",
          "apiVersion": "2015-06-15",
          "dependsOn": [ ],
          "tags": {
            "displayName": "public-ip-front"
            },
            "properties": {
              "publicIPAllocationMethod": "Dynamic",
              "dnsSettings": {
                "domainNameLabel": "[parameters('publicipaddressDnsName')]"
              }
            }
        }
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/virtualNetworks/aleksiv-node-red-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_aleksiv_node_red_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "348997c9-34e4-40f4-9cc4-3e933d9e9970",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.2.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"e8137226-3c22-4168-b646-9252e3f1c15d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.2.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/networkSecurityGroups/node-red-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_node_red_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_node_red_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/networkSecurityGroups/node-red-nsg/securityRules/Port_1880'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_node_red_nsg_name'), '/', parameters('securityRules_Port_1880_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "1880",
                "sourceAddressPrefix": "188.117.22.59",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_node_red_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0a1f92e6-2fc0-4f08-a12d-224bec28e22b/resourceGroups/aleksiv-node-red/providers/Microsoft.Network/virtualNetworks/aleksiv-node-red-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_aleksiv_node_red_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.2.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_aleksiv_node_red_vnet_name'))]"
            ]
        }
    ]
}
